# voiceit3-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  release.sh
.github/workflows/: ci.yml  test.yml
examples/: test_example.rs
src/: client.rs  lib.rs
src/client/: mod.rs
src/errors/: mod.rs
src/structs/: enrollments.rs  groups.rs  identification.rs  mod.rs  phrases.rs  subaccounts.rs  users.rs  verification.rs
