[package]
name = "voiceit2"
version = "0.3.0"
authors = ["gilgameshskytrooper <me@gilgameshskytrooper.io>"]
description = """
A Rust wrapper for VoiceIt's API 2.0 featuring Voice + Face Verification and Identification.
"""
documentation = "https://api.voiceit.io/?rust"
homepage = "https://voiceit.io"
repository = "https://github.com/voiceittech/VoiceIt2-Rust"
readme = "README.md"
keywords = ["biometrics", "voice", "face-recognition", "voice-recognition", "voiceit"]
license = "MIT"
edition = "2018"

[dependencies]
reqwest = { version = "0.9.17", default-features = false, features = ["rustls-tls"] }
base64 = "0.10.1"
hyper = "0.12.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
url = "1"
