[package]
name = "voiceit2"
version = "0.5.0"
authors = ["gilgameshskytrooper <me@gilgameshskytrooper.io>"]
description = """
A Rust wrapper for VoiceIt's API 2.0 featuring Voice + Face Verification and Identification.
"""
documentation = "https://api.voiceit.io/?rust"
homepage = "https://voiceit.io"
repository = "https://github.com/voiceittech/VoiceIt2-Rust"
readme = "README.md"
keywords = ["biometrics", "voice", "face-recognition", "voice-recognition", "voiceit"]
license = "MIT"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "blocking", "multipart"] }
base64 = "0.21.2"
hyper = "0.14.27"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
regex = "1.9.1"
url = "2.4.0"
